<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0                              http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.moparforia</groupId>
    <artifactId>playforia-minigolf</artifactId>
    <version>2.2.1.0-BETA</version>
    <packaging>pom</packaging>
    <name>Playforia Minigolf</name>
    <description>An online multiplayer minigolf game</description>
    <inceptionYear>2002</inceptionYear>
    <organization>
        <name>Playforia</name>
    </organization>

    <modules>
        <module>server</module>
        <module>editor</module>
        <module>client</module>
        <module>shared</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.mainClass>test.mainClass</project.mainClass>
        <picocli.version>4.7.6</picocli.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.netty</groupId>
                <artifactId>netty-all</artifactId>
                <version>4.2.0.Final</version>
            </dependency>
            <dependency>
                <groupId>org.moparforia</groupId>
                <artifactId>shared</artifactId>
                <version>2.2.1.0-BETA</version>
            </dependency>
            <dependency>
                <groupId>info.picocli</groupId>
                <artifactId>picocli</artifactId>
                <version>${picocli.version}</version>
            </dependency>

            <!-- Test dependencies-->
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-engine</artifactId>
                <version>5.12.0</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-core</artifactId>
                <version>5.17.0</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-junit-jupiter</artifactId>
                <version>5.17.0</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>com.github.marschall</groupId>
                <artifactId>memoryfilesystem</artifactId>
                <version>2.8.1</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.14.0</version>
                    <configuration>
                        <release>21</release>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-shade-plugin</artifactId>
                    <version>3.6.0</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>shade</goal>
                            </goals>
                            <phase>package</phase>
                            <configuration>
                                <transformers>
                                    <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                        <mainClass>${project.mainClass}</mainClass>
                                        <manifestEntries>
                                            <Specification-Title>${project.artifactId}</Specification-Title>
                                            <Specification-Version>${project.version}</Specification-Version>
                                            <Implementation-Title>${project.artifactId}</Implementation-Title>
                                            <Implementation-Version>${project.version}</Implementation-Version>
                                            <Implementation-Vendor-Id>${project.groupId}</Implementation-Vendor-Id>
                                        </manifestEntries>
                                    </transformer>
                                </transformers>
                                <createDependencyReducedPom>false</createDependencyReducedPom>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>sh.tak.appbundler</groupId>
                    <artifactId>appbundle-maven-plugin</artifactId>
                    <version>1.2.0</version>
                </plugin>
                <plugin>
                    <groupId>com.akathist.maven.plugins.launch4j</groupId>
                    <artifactId>launch4j-maven-plugin</artifactId>
                    <version>2.5.2</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>exec-maven-plugin</artifactId>
                    <version>3.5.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.5.2</version>
                    <configuration>
                        <argLine>-XX:+EnableDynamicAgentLoading</argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>io.github.download-maven-plugin</groupId>
                    <artifactId>download-maven-plugin</artifactId>
                    <version>2.0.0</version>
                </plugin>
                <plugin>
                    <groupId>com.diffplug.spotless</groupId>
                    <artifactId>spotless-maven-plugin</artifactId>
                    <version>2.44.2</version>
                    <configuration>
                        <java>
                            <palantirJavaFormat/>
                            <importOrder/>
                            <removeUnusedImports/>
                            <formatAnnotations/>
                            <trimTrailingWhitespace/>
                            <endWithNewline/>
                        </java>
                        <pom>
                            <sortPom>
                                <nrOfIndentSpace>4</nrOfIndentSpace>
                                <expandEmptyElements>false</expandEmptyElements>
                            </sortPom>
                        </pom>
                    </configuration>
                    <executions>
                        <execution>
                            <goals>
                                <goal>check</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
